<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connected Dave</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register_website"> Add new </string>
    <string name="list_website"> Connections </string>
    <string name="about"> About </string>
    <string name="register_title"> Add new website </string>
    <string name="website_url"> Website </string>
    <string name="website_content"> Content </string>
    <string name="website_button"> Register </string>
    <string name="website_config"> Config </string>
    <string name="config"> Configuration </string>
    <string name="list"> Connections </string>
    <string name="cycletime_test"> Cycletime Test </string>
	<string name="about_content"> Esse aplicativo foi desenvolvido no Brasil pela empresa Sorry Dave, sua principal função´e auxlias os SysAdmins à cuidar de seus servidores, decidimos colocar um preço de 0,99$ para conseguir recursos para continuar aprimorando ele, e não precisar colocar propagandas nele, atrapalhando o usuario final, qualquer dica ou sugestão por favor, entre em contato (philipe@sorrydave.com.br) </string>
	
</resources>
