<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.sorrydave.connect_dave.MainActivity" >

    <item
        android:id="@+id/action_register_website"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/register_website" />
    
  	<item
        android:id="@+id/action_list_website"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/list_website" />
	<item
        android:id="@+id/action_config"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/website_config" />
  	<item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about" />
    
</menu>
